# ai-invest-sandbox

./: .env.example  .gitignore  .replit  =0.19.0  README.md  TELEGRAM_TEST_GUIDE.md  analyze_project_size.py  backtest_sentiment.py  cleanup_test_data.py  daily_plan_bot.py  daily_plan_bot_mock.py  daily_plan_bot_ptb.py  google_apps_script_example.js  improved_google_apps_script.js  launch_simple.sh  launch_with_keydb.sh  main.py  new_google_apps_script.js  news_cache.db  news_feed.py  pyproject.toml  replit.nix  requirements.txt  run_gdelt_diag.sh  setup_sandbox.py  stop_all_bots.py  test_bot_debug.py  test_english_news.py  test_models.py  test_news_sources.py  test_pnl.py  test_sentiment_command.py  test_sentiment_fix.py  test_sentiment_llm.py  test_sentiment_simple.py  test_sheets_backtest.py  test_step1_config.py  test_step1_environment.py  test_step2_gas.py  test_step2_telegram_basic.py  (+11 more)
attached_assets/: Pasted--1-composite-score-3--1750305326320_1750305326321.txt  Pasted--1-sentiment-OpenAI-fetch-ru-news-set-e-1-nlp-sentiment-p-1750663493480_1750663493483.txt  Pasted--GDELT--1750138954488_1750138954492.txt  Pasted--GDELT-NewsAPI-RSS-1--1750140675476_1750140675477.txt  Pasted--LLM-GPT-4o-Claude-Gemini--1750116238469_1750116238471.txt  Pasted--TASK-patch-nlp-news-rss-async-py-so-that-MOEX-and-Interfax-RSS-are-fetched-tim-1750142341583_1750142341585.txt  Pasted--daily-plan-bot-DEMO-Tinkoff-API--1750312419845_1750312419846.txt  Pasted--function-doPost-e-try-console-log-Received-POST-request-console-log-Parameters--1749787663844_1749787663845.txt  (+8 more)
db/: __init__.py  (+2 more)
(+23 files in other folders)
